Refactor MAEDN application structure and GUI implementation
- Removed MenuView.fxml as it is no longer needed.
- Introduced App.scala to serve as the main entry point for the application.
- Added ActionManager.scala to handle user actions and commands.
- Created DesignManager.scala for managing the GUI design and scene creation.
- Implemented FXMLManager.scala for loading FXML files and creating scenes.
- Developed GUI.scala to manage the overall GUI lifecycle and scene switching.
- Added MAEDNApplication.scala to encapsulate JavaFX application logic.
- Implemented TUI.scala and InputManager.scala for terminal user interface functionality.
- Created TextDisplay.scala for rendering game information in the terminal.
- Removed legacy print.worksheet.sc and maedn.scala files.
- Enhanced event handling and UI updates based on game state changes.